WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122116
Pass VM instead of ExecState to ObjectPrototype constructor.
https://bugs.webkit.org/show_bug.cgi?id=122116
Summary
Pass VM instead of ExecState to ObjectPrototype constructor.
Andreas Kling
Reported
2013-09-30 12:11:14 PDT
Pass VM instead of ExecState to ObjectPrototype constructor.
Attachments
Patch
(4.29 KB, patch)
2013-09-30 12:12 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-09-30 12:12:48 PDT
Created
attachment 213020
[details]
Patch
Geoffrey Garen
Comment 2
2013-09-30 13:17:01 PDT
Comment on
attachment 213020
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-09-30 14:40:50 PDT
Comment on
attachment 213020
[details]
Patch Clearing flags on attachment: 213020 Committed
r156680
: <
http://trac.webkit.org/changeset/156680
>
WebKit Commit Bot
Comment 4
2013-09-30 14:40:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug