Pass VM instead of ExecState to ObjectPrototype constructor. <https://webkit.org/b/122116>

Reviewed by Geoffrey Garen.

The ObjectPrototype constructor was only using the ExecState to get
to the VM.


Canonical link: https://commits.webkit.org/140177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156680 268f45cc-cd09-0410-ab3c-d52691b4dbfc